<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_edges"
    tools:context=".ConnectionErrorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/incomplete_error_label"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/Incomplete"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/incomplete_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/incomplete_msg"
            android:textColor="@android:color/black"
            android:layout_gravity="start"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/incomplete_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="0dp"
            android:text="@string/incomplete_ok"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent" />

    </LinearLayout>

</RelativeLayout>