<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewReportActivity"
    tools:showIn="@layout/activity_new_report"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- report state -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/report_state"
            android:textSize="25sp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/critical_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/critical_choose_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_critical_round_icon_round"
                        android:scaleType="fitCenter"
                        android:clickable="true"
                        android:focusable="true"
                        app:riv_corner_radius="30dip"
                        app:riv_mutate_background="true"
                        app:riv_tile_mode="repeat"
                        app:riv_oval="true" />
                    <RadioButton
                        android:id="@+id/critical_choose_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|start"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/critical_state"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/problem_choose_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_problem_round_icon_round"
                        android:scaleType="fitCenter"
                        android:clickable="true"
                        android:focusable="true"
                        app:riv_corner_radius="30dip"
                        app:riv_mutate_background="true"
                        app:riv_tile_mode="repeat"
                        app:riv_oval="true" />
                    <RadioButton
                        android:id="@+id/problem_choose_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|start"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/problem_state"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
        
        <!-- specification -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/specification"
            android:textSize="25sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/spec_report_title"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/new_report_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/new_specification"
            android:singleLine="true"
            android:gravity="start"
            android:textAlignment="viewStart" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/specification"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/new_specification"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:nextFocusDown="@id/new_operating_system"
            android:gravity="start"
            android:textAlignment="viewStart" />

        <!-- computer -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/computer"
            android:textSize="25sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/comp_os_distro"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/new_operating_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/new_memory"
            android:singleLine="true"
            android:gravity="start"
            android:textAlignment="viewStart" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/comp_memory"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/new_memory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:inputType="number"
            android:singleLine="true"
            android:gravity="start"
            android:textAlignment="viewStart" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/comp_uptime"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/new_uptime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:inputType="numberDecimal|number"
            android:singleLine="true"
            android:gravity="start"
            android:textAlignment="viewStart" />

        <!-- owner -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/owner"
            android:textSize="25sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/own_name"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/new_owner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/new_owner_department"
            android:singleLine="true"
            android:gravity="start"
            android:textAlignment="viewStart" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/own_department"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/new_owner_department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:gravity="start"
            android:textAlignment="viewStart" />

        <!-- add here image import -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/screenshot"
            android:textSize="25sp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <ImageView
                android:id="@+id/new_photo_capture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/ic_photo_camera_black_24dp"/>
            <ImageView
                android:id="@+id/new_photo_library"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/ic_photo_library_black_24dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/screenshot_path_label"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/new_screen_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/new_screenshot_path"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/new_report_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/new_report_button"
            android:layout_gravity="center" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>